--- a/profile.html
+++ b/profile.html
@@ -240,6 +240,16 @@
                 });
             }
         });
+
+        // 顯示子菜單
+        function showSubMenu() {
+            document.getElementById("user-options").style.display = "block";
+        }
+
+        // 隱藏子菜單
+        function hideSubMenu() {
+            document.getElementById("user-options").style.display = "none";
+        }
     </script>
     </script>
 
