--- a/course1.html
+++ b/course1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>課程內容 - 物理學習管理系統</title>
     <style>
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -144,6 +145,27 @@
 
         .dropdown:hover .dropdown-content {
             display: block;
+        }
+
+        /* 個人檔案子導覽列的位置調整 */
+        #profile-menu {
+            position: relative;
+            /* 相對定位 */
+        }
+
+        #user-options {
+            position: absolute;
+            /* 絕對定位 */
+            top: 100%;
+            /* 與父元素底部對齊 */
+            left: 0;
+            display: none;
+            /* 隱藏 */
+        }
+
+        #profile-menu:hover #user-options {
+            display: block;
+            /* 滑鼠移動到項目時顯示子導覽列 */
         }
     </style>
 </head>
